# amo-backend

./: .gitignore  .pre-commit-config.yaml  AUTHORS  Procfile  README.md  compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: checks.yml  django.yml
accounts/: access_policy.py  account_management_service.py  admin.py  apps.py  errors.py  models.py  password_validation.py  schema.py  serializer.py  signals.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_emailactivationtoken.py  0003_customuser_is_email_active.py  0004_remove_customuser_first_name_and_more.py  0005_perfil_entrada.py  0006_perfil_foto.py  0007_alter_perfil_foto.py  0008_remove_emailactivationtoken_activated_at_and_more.py  0009_alter_emailactivationtoken_expires_at.py  0010_alter_emailactivationtoken_expires_at.py  0011_alter_emailactivationtoken_expires_at.py  0012_alter_emailactivationtoken_expires_at.py  0013_alter_emailactivationtoken_expires_at.py  0014_alter_emailactivationtoken_expires_at.py  0015_alter_emailactivationtoken_expires_at.py  0016_alter_emailactivationtoken_expires_at.py  0017_alter_emailactivationtoken_expires_at.py  0018_alter_emailactivationtoken_expires_at.py  0019_alter_emailactivationtoken_expires_at.py  0020_alter_emailactivationtoken_expires_at.py  0021_alter_emailactivationtoken_expires_at.py  0022_alter_emailactivationtoken_expires_at.py  0023_alter_emailactivationtoken_expires_at.py  0024_alter_emailactivationtoken_expires_at.py  0025_alter_emailactivationtoken_expires_at.py  0026_alter_emailactivationtoken_expires_at.py  0027_alter_emailactivationtoken_expires_at.py
accounts/tests/: test_access_policy.py  test_authentication.py  test_custom_user.py  test_registration_user.py  test_user_registration.py  test_user_viewset.py
accounts/utils/: sanitization_utils.py
core/: access_policy.py  admin.py  apps.py  errors.py  filters.py  models.py  serializer.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_disciplinas.py  0003_disciplinas_monitores_disciplinas_professores.py  0004_agendamento.py  0004_arquivo.py  0005_agendamento_link_zoom.py  0005_arquivo.py  0005_merge_0004_agendamento_0004_arquivo.py  0006_agendamento_agendamento_unico.py  0007_alter_agendamento_link_zoom.py  0008_monitoria.py  0008_monitoria_monitoria_horario_unico.py  (+1 more)
core/tests/: test_access_policy.py  (+2 more)
fixtures/: groups.yaml
forum_amo/: access_policy.py  admin.py  apps.py  forum_service.py  models.py  serializers.py  tests.py  utils.py  views.py  zoom.py
monitorias/: asgi.py  settings.py  urls.py  wsgi.py
utils/: test_utils.py
(+18 files in other folders)
