[tool.poetry]
name = "monitorias-backend"
version = "0.1.0"
description = ""
authors = ["Juan Monteiro <juan.monteiro@jmonteiro.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
drf-spectacular = "^0.22.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
rollbar = "^0.16.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
